3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

configure, aclocal.m4, utils/config.guess, utils/config.sub,
  utils/ltmain.sh, include/autoconf.h.in, */Makefile.in: regenerated using
  slightly newer versions of libtoolize, aclocal, automake and autoconf.
Raphael Quinet 2006-08-25

configure.ac: add option to disable unit tests, fix incorrect usage of
  AC_ARG_ENABLE for dmalloc, fix some typos.
Raphael Quinet 2006-08-25

common/map.c: static buffers are evil. This resulted in name weirdness, and
 strange results with overlays.
Ryo 2006-08-25

server/server.c: fix a weird name change. Basically, function path_combine_and_normalize
 was called twice while first result was still in use, resulting in weird names.
Ryo 2006-08-23

Fix for bug #1528636 (Invisible player disappears from map view).
 socket/request.c: special case for view's center.
Ryo 2006-08-22

Fix/improve login procedure such that if a player is trying to log in with
the name & correct password of character already on server, terminate old 
connection and let them log in.
---
server/login.c: Remove name check for players on server in check_name().
    Make wrong_password() to handle error message handling for wrong password
    In check_login(), iterate over players on system to see if there is a
    match - if mismatched password, print error.  If correct password,
    terminate old connection.  Move wrong password logic from check_login()
    to wrong_password().
MSW 2006-08-21

server/attack.c: Call kill_player() from the kill_object() code. Fixes bug #1539192.
Alex Schultz 2006-08-21

server/spell_effect.c: Make counterspell not effect permenant spell effects.
    Fixes bug #1539220.